# nandy

./: .gitignore  README.md  build_firmware.sh  build_software.sh  go.mod  go.sum  main.go
Controller/: Controller.csproj  Controller.sln  Dashboard.Designer.cs  Dashboard.cs  Device.cs  Logger.cs  Program.cs  Server.cs  Sockets.cs
Flasher/: CMakeLists.txt  common.hpp  main.cpp  tusb_config.h
Flasher/commands/: commands.cpp  commands.hpp
Flasher/core/: core.cpp  core.hpp
Flasher/xbox/: xbox.cpp  xbox.hpp
firmware/: CMakeLists.txt  usb_descriptors.c
firmware/xbox/: xbox.hpp
